# modular_api

./: README.md  plan.md
code/py/: CHANGELOG.md  README.md  pyproject.toml
code/py/example/: example.py
code/py/example/health/: always_pass_health_check.py
code/py/modular_api/: CHANGELOG.md  README.md  pyproject.toml
code/py/modular_api/src/modular_api/: __init__.py  dto.py
code/py/modular_api/src/modular_api/core/: official_plugins.py  plugin.py
code/py/modular_api/src/modular_api/core/health/: health_check.py  health_service.py
code/py/modular_api/src/modular_api/core/logger/: logging_middleware.py
code/py/modular_api/src/modular_api/graphql/catalog/: __init__.py  graphql_catalog_builder.py
code/py/modular_api/src/modular_api/graphql/read/: sql_read_contract.py  sqlserver_read_compiler.py
code/py/modular_api/src/modular_api/graphql/runtime/: __init__.py  graphql_artifacts.py  graphql_runtime_options.py  graphql_runtime_plugin.py
code/py/modular_api/src/modular_api/graphql/sqlserver/: physical_model.py  sql_server_connection_settings.py  sql_server_metadata_reader.py
code/py/modular_api/src/modular_api/openapi/: swagger_docs.py
code/py/modular_api/tests/: conftest.py  test_clean_room_driver_isolation.py  test_field_example.py  test_schema_conformance.py
code/py/modular_api/tests/graphql/: test_graphql_runtime_execution.py  test_graphql_runtime_integration.py  test_graphql_schema_sdl_generator.py  test_sqlserver_metadata_reader_smoke.py  test_sqlserver_read_compiler.py  test_sqlserver_smoke.py
code/py/modular_api/tests/logger/: test_logging_middleware.py
code/py/modular_api/tests/openapi/: test_json_to_yaml.py
code/py/modular_api/tests/plugin_host/: test_official_plugins_basepath.py  test_plugin_host_guardrails.py  test_plugin_openapi_contributions.py
code/py/modular_api_graphql_client/: CHANGELOG.md  README.md  pyproject.toml
code/py/modular_api_graphql_client/example/: example.py
code/py/modular_api_graphql_client/src/modular_api_graphql_client/: __init__.py  client.py
code/py/modular_api_graphql_client/tests/: test_graphql_client.py
code/py/modular_api_postgres/: CHANGELOG.md  README.md  pyproject.toml
code/py/modular_api_postgres/example/: example.py
code/py/modular_api_postgres/src/modular_api_postgres/: __init__.py  db_client.py
code/py/modular_api_postgres/tests/: test_db_client.py  test_db_conformance.py
code/py/modular_api_rest_client/: CHANGELOG.md  README.md  pyproject.toml
code/py/modular_api_rest_client/example/: example.py
code/py/modular_api_rest_client/src/modular_api_rest_client/: __init__.py  client.py
code/py/modular_api_rest_client/tests/: test_http_client.py
code/py/modular_api_sqlserver/: CHANGELOG.md  README.md  pyproject.toml
code/py/modular_api_sqlserver/example/: example.py
code/py/modular_api_sqlserver/src/modular_api_sqlserver/: __init__.py  db_client.py
code/py/modular_api_sqlserver/tests/: test_db_client.py  test_db_conformance.py
code/py/src/modular_api/: __init__.py
code/py/src/modular_api/core/: error_response_middleware.py  modular_api.py  official_plugins.py  plugin.py  request_pipeline_audit.py
code/py/src/modular_api/core/logger/: logger.py
code/py/src/modular_api/core/metrics/: metric.py
code/py/src/modular_api/graphql/: __init__.py
code/py/src/modular_api/graphql/metadata/: __init__.py  graphql_metadata_parser.py
code/py/src/modular_api/graphql/read/: __init__.py
code/py/src/modular_api/graphql/runtime/: __init__.py  graphql_runtime_options.py  graphql_runtime_plugin.py
code/py/src/modular_api/graphql/schema/: __init__.py  graphql_schema_sdl_generator.py
code/py/src/modular_api/graphql/sqlserver/: __init__.py
code/py/src/modular_api/openapi/: swagger_docs.py
code/py/tests/: test_modular_api.py
code/py/tests/graphql/: test_graphql_artifact_compiler.py  test_graphql_catalog_builder.py  test_graphql_metadata_parser.py  test_graphql_runtime_integration.py  test_sqlserver_metadata_reader_smoke.py  test_sqlserver_smoke.py
code/py/tests/plugin_host/: test_plugin_host_lifecycle.py  test_plugin_host_middleware_slots.py  test_stage0_plugin_host_red.py
dart/: CHANGELOG.md  README.md  pubspec.yaml
docs/: architecture.md  db_client_model_spec.md  graphql_catalog_contract.md  graphql_catalog_proposal.md  graphql_dependency_boundary_tdd_plan.md  graphql_ecosystem_spec.md  graphql_v1_tdd_plan.md  pitfalls.md  plugin_architecture_analysis.md  plugin_guide.md  plugin_host_contract_draft.md  plugin_host_guide.md  plugin_host_state_of_art.md  release_exit_checklist.md  release_validation_matrix.md  roadmap.md  service_client_model_spec.md
docs-ui/: CHANGELOG.md  index.html  package-lock.json  package.json  vite.config.js
py/: CHANGELOG.md  README.md  publish.ps1  pyproject.toml
py/doc/: naming_guide.md
py/example/: example.py
py/example/modules/greetings/: greetings_builder.py
py/example/modules/greetings/usecases/: hello_world.py
py/example/modules/time/: time_builder.py
py/example/modules/time/usecases/: current_time.py
py/src/modular_api/: __init__.py
py/src/modular_api/core/: modular_api.py  module_builder.py  registry.py  use_case_exception.py  usecase.py  usecase_handler.py
py/src/modular_api/core/health/: health_handler.py
py/src/modular_api/core/logger/: logging_middleware.py
py/src/modular_api/core/metrics/: metric_registry.py  metrics_middleware.py
py/src/modular_api/middlewares/: cors.py
py/src/modular_api/openapi/: openapi.py  swagger_docs.py
py/tests/: test_auto_schema.py  test_fromjson_validation.py  test_modular_api.py  test_module_builder.py  test_schema_conformance.py  test_use_case_exception.py  test_usecase.py  test_usecase_handler.py
py/tests/health/: test_health_check.py  test_health_handler.py  test_health_service.py
py/tests/logger/: test_logger.py
py/tests/metrics/: test_metric.py  test_metric_registry.py  test_metrics_middleware.py
py/tests/middlewares/: test_cors.py
py/tests/openapi/: test_module_builder.py  test_openapi_endpoints.py  test_openapi_spec.py  test_registry.py  test_swagger_docs.py
(+361 files in other folders)
