[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macss-modular-api"
version = "0.4.7"
description = "Use-case-centric toolkit for building modular APIs with Starlette. Define UseCase classes (input → validate → execute → output), connect them to HTTP routes, and expose OpenAPI documentation automatically."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "ccisne.dev" }]
keywords = ["api", "usecase", "openapi", "starlette", "modular", "macss"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "starlette>=0.40",
    "pydantic>=2.0",
]

[project.optional-dependencies]
serve = ["uvicorn>=0.30"]
graphql = ["json5>=0.9.14", "graphql-core>=3.2,<3.3"]
sqlserver = ["pyodbc>=5.2"]
dev = [
    "json5>=0.9.14",
    "graphql-core>=3.2,<3.3",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "pyodbc>=5.2",
    "uvicorn>=0.30",
]

[project.urls]
Homepage = "https://github.com/macss-dev/modular_api"
Repository = "https://github.com/macss-dev/modular_api/tree/main/code/py"
Issues = "https://github.com/macss-dev/modular_api/issues"
Documentation = "https://github.com/macss-dev/modular_api/tree/main/code/py#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
